--- a/TravelPlanner/.classpath
+++ b/TravelPlanner/.classpath
@@ -3,9 +3,9 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="/cshome/jihwan/TravelPlanner/Additional resources/gson/gson-2.3.1.jar"/>
-	<classpathentry kind="lib" path="/cshome/jihwan/TravelPlanner/Additional resources/gson/gson-2.3.1-javadoc.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="lib" path="D:/programming/workbench/Android/TravelPlanner/Additional resources/gson/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="D:/programming/workbench/Android/TravelPlanner/Additional resources/gson/gson-2.3.1-javadoc.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
