added internet permission to app

--- a/TravelPlanner/AndroidManifest.xml
+++ b/TravelPlanner/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
     <!-- Add permission for writing to external storage (android.permission.WRITE_EXTERNAL_STORAGE) -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
