--- a/TravelPlanner/.classpath
+++ b/TravelPlanner/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="lib" path="D:/programming/workbench/Android/TravelPlanner/Additional resources/gson/gson-2.3.1.jar"/>
-	<classpathentry kind="lib" path="D:/programming/workbench/Android/TravelPlanner/Additional resources/gson/gson-2.3.1-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="Additional resources/gson/gson-2.3.1-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="Additional resources/gson/gson-2.3.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
