--- a/TravelPlanner/AndroidManifest.xml
+++ b/TravelPlanner/AndroidManifest.xml
@@ -13,16 +13,15 @@
 
     <!-- Add permission for writing to external storage (android.permission.WRITE_EXTERNAL_STORAGE) -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application        
+    <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" 
-        android:theme="@style/AppTheme"
-        >
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
         <activity
             android:name="ca.ualberta.cmput301w15t13.Activities.LoginActivity"
             android:label="@string/app_name" >
@@ -46,8 +45,10 @@
             android:name="ca.ualberta.cmput301w15t13.Activities.ExpenseActivity"
             android:label="@string/title_activity_expense_viewer" >
         </activity>
-        
-        
+        <activity
+            android:name="ca.ualberta.cmput301w15t13.Activities.EditTag"
+            android:label="@string/title_activity_edit_tag" >
+        </activity>
     </application>
 
 </manifest>
