Annoyingly, you can only select one item from a spinner. So filter is now a button

--- a/TravelPlanner/AndroidManifest.xml
+++ b/TravelPlanner/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:name="dialogs.TagChoiceFrgament"
             android:label="@string/title_activity_tag_choice_frgament" >
         </activity>
+        <activity
+            android:name="dialogs.FilterFragmentDialog"
+            android:label="@string/title_activity_filter_fragment_dialog" >
+        </activity>
     </application>
 
 </manifest>
