--- a/TravelPlanner/AndroidManifest.xml
+++ b/TravelPlanner/AndroidManifest.xml
@@ -15,12 +15,27 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    
+
+	
+
+
+
+    
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+	   <receiver android:name="persistanceModel.InternetReceiver">
+	   <intent-filter>
+	      <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+	   	</intent-filter>
+		</receiver>
+	
         <activity
             android:name="ca.ualberta.cmput301w15t13.Activities.LoginActivity"
             android:label="@string/app_name" >
