--- a/TravelPlanner/AndroidManifest.xml
+++ b/TravelPlanner/AndroidManifest.xml
@@ -8,27 +8,20 @@
         android:minSdkVersion="17"
         android:targetSdkVersion="17" />
 
-    <!-- Add permission for camera (android.permission.CAMERA) -->
     <uses-permission android:name="android.permission.CAMERA" />
-
-    <!-- Add permission for writing to external storage (android.permission.WRITE_EXTERNAL_STORAGE) -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 
-	
-
-
-
-    
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/DarkTheme" >
         
 
 	
