--- a/TravelPlanner/AndroidManifest.xml
+++ b/TravelPlanner/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ca.ualberta.cmput301w15t13"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" 
+	>
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -17,7 +18,7 @@
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
-
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -28,42 +29,63 @@
 	
         <activity
             android:name="ca.ualberta.cmput301w15t13.Activities.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ca.ualberta.cmput301w15t13.Activities.ClaimActivity" >
+        
+        <activity android:name="ca.ualberta.cmput301w15t13.Activities.ClaimActivity" 
+            android:screenOrientation="portrait">
         </activity>
+        
         <activity 
         	android:name="ca.ualberta.cmput301w15t13.Activities.GeolocationMapActivity"
         	android:label="@string/title_activity_map"    
+        	android:screenOrientation="portrait"
         ></activity>
+        
         <activity
             android:name="ca.ualberta.cmput301w15t13.Activities.PrimitivePhotoActivity"
-            android:label="@string/title_activity_test" >
+            android:label="@string/title_activity_test" 
+            android:screenOrientation="portrait"
+            >
         </activity>
+        
         <activity
             android:name="ca.ualberta.cmput301w15t13.Activities.MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
+        
         <activity
             android:name="ca.ualberta.cmput301w15t13.Activities.ExpenseActivity"
-            android:label="@string/title_activity_expense_viewer" >
+            android:label="@string/title_activity_expense_viewer" 
+            android:screenOrientation="portrait"
+            >
         </activity>
+        
         <activity
             android:name="ca.ualberta.cmput301w15t13.Activities.EditTag"
-            android:label="@string/title_activity_edit_tag" >
+            android:label="@string/title_activity_edit_tag" 
+            android:screenOrientation="portrait"
+            >
         </activity>
+        
         <activity
             android:name="dialogs.TagChoiceFrgament"
-            android:label="@string/title_activity_tag_choice_frgament" >
+            android:label="@string/title_activity_tag_choice_frgament"
+            android:screenOrientation="portrait"
+             >
         </activity>
+        
         <activity
             android:name="dialogs.FilterFragmentDialog"
-            android:label="@string/title_activity_filter_fragment_dialog" >
+            android:label="@string/title_activity_filter_fragment_dialog" 
+            android:screenOrientation="portrait"
+            >
         </activity>
         
         <meta-data
