--- a/TravelPlanner/AndroidManifest.xml
+++ b/TravelPlanner/AndroidManifest.xml
@@ -8,7 +8,9 @@
     <uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="17" />
+    
 
+	<uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -18,15 +20,14 @@
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
+
 	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/DarkTheme" >
-        
-        <uses-library android:name="com.google.android.maps"/>
-	
+        	
         <activity
             android:name="ca.ualberta.cmput301w15t13.Activities.LoginActivity"
             android:label="@string/app_name" 
@@ -41,12 +42,7 @@
         <activity android:name="ca.ualberta.cmput301w15t13.Activities.ClaimActivity" 
             android:screenOrientation="portrait">
         </activity>
-        
-        <activity 
-        	android:name="ca.ualberta.cmput301w15t13.Activities.GeolocationMapActivity"
-        	android:label="@string/title_activity_map"    
-        	android:screenOrientation="portrait"
-        ></activity>
+
         
         <activity
             android:name="ca.ualberta.cmput301w15t13.Activities.PrimitivePhotoActivity"
@@ -88,11 +84,12 @@
             >
         </activity>
         
+        <activity android:name=".Activities.GoogleMapActivity"></activity>
+                
         <meta-data
-    		android:name="com.google.android.gms.version"
-    		android:value="@integer/google_play_services_version" />
-        
-     <meta-data
+		    android:name="com.google.android.gms.version"
+		    android:value="@integer/google_play_services_version" />
+        <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBkXD7UqakLlhXVw-fVFssCnfOfL0AujzE" />
     </application>
