Added maps search class and better marker

--- a/TravelPlanner/AndroidManifest.xml
+++ b/TravelPlanner/AndroidManifest.xml
@@ -85,6 +85,7 @@
         </activity>
         
         <activity android:name=".Activities.GoogleMapViewerActivity"></activity>
+        <activity android:name=".Activities.GoogleMapSearchActivity"></activity>
                 
         <meta-data
 		    android:name="com.google.android.gms.version"
